<resources>
    <string name="app_name">immediate books</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="to_read">To Read</string>
    <string name="navigation_drawer_open">Open Navigaiton drawer</string>
    <string name="navigation_drawer_close">Close Navigaiton drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
</resources>
